Make h2 db persistent

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ server.port=80
 spring.h2.console.enabled=true
 
 #Spring h2 configuration
-spring.datasource.url=jdbc:h2:mem:ship-man-serv
+#spring.datasource.url=jdbc:h2:mem:ship-man-serv
+spring.datasource.url=jdbc:h2:file:~/ship-man-serv;AUTO_RECONNECT=TRUE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
